// Original file: node_modules/soum-proto/proto/v2.proto


export interface Condition {
  'id'?: (string);
  'name'?: (string);
  'nameAr'?: (string);
  'labelColor'?: (string);
  'textColor'?: (string);
}

export interface Condition__Output {
  'id': (string);
  'name': (string);
  'nameAr': (string);
  'labelColor': (string);
  'textColor': (string);
}
